--- a/Univer/Views/Shared/_Layout.cshtml
+++ b/Univer/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Студенти", "Index", "Students")</li>
+                    <li>@Html.ActionLink("Викладачі", "Index", "Teachers")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
                 </ul>
