--- a/Univer/Views/Students/Edit.cshtml
+++ b/Univer/Views/Students/Edit.cshtml
@@ -27,8 +27,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Faculty, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Faculty, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Faculty, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Faculty,
+                                             Model.Faculties,
+                                             "- Please select a state -",
+                                             new { @class = "form-control" })
             </div>
         </div>
 
